--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-.env
+# Dependencies
+# Ignores dependency folders in any subdirectory (root, /client, etc.)
 node_modules/
+
+# Environment Variables
+# Ignores all .env files to protect sensitive keys
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Production build folder for the frontend
+/client/build
+/client/dist
+
+# Logs
+npm-debug.log
+yarn-error.log
+yarn-debug.log
+
+# System files
+.DS_Store
